--- a/index.html
+++ b/index.html
@@ -2,108 +2,80 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>导航页面</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f4;
+      background: #f9f9f9;
       margin: 0;
-      padding: 0;
+      padding: 2em;
     }
-    header {
-      background-color: #4CAF50;
-      color: white;
-      padding: 1em;
+    h1 {
       text-align: center;
-      font-size: 1.5em;
-    }
-    main {
-      padding: 1em;
-      max-width: 800px;
-      margin: 0 auto;
+      color: #333;
     }
     ul {
       list-style: none;
       padding: 0;
+      margin: 2em auto;
     }
     li {
-      background: white;
-      margin: 0.8em 0;
-      padding: 1em;
+      background: #fff;
+      margin: 10px 0;
+      padding: 15px 20px;
       border-left: 6px solid #4CAF50;
-      border-radius: 6px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-      transition: transform 0.1s ease;
-    }
-    li:hover {
-      transform: translateY(-2px);
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
     a {
-      color: #333;
       text-decoration: none;
-      font-size: 1.1em;
-      display: block;
-      margin-bottom: 0.3em;
+      color: #333;
+      font-weight: bold;
     }
     a:hover {
       color: #4CAF50;
     }
     .desc {
       font-size: 0.9em;
-      color: #777;
-    }
-
-    @media (max-width: 600px) {
-      header {
-        font-size: 1.2em;
-      }
-      a {
-        font-size: 1em;
-      }
+      color: #666;
+      margin-top: 4px;
     }
   </style>
 </head>
 <body>
-  <header>🔗 快速导航</header>
-  <main>
-    <ul>
-      <li>
-        <a href="http://88.babyamy.store:3000/activate" target="_blank">🤖 启动 DeepSeek 自动回复</a>
-        <div class="desc">启动智能自动回复系统</div>
-      </li>
-      <li>
-        <a href="http://88.babyamy.store:3000/pause" target="_blank">⏸️ 暂停 DeepSeek 自动回复</a>
-        <div class="desc">暂停当前的自动回复服务</div>
-      </li>
-      <li>
-        <a href="http://serial.babyamy.store" target="_blank">🔐 序列号管理</a>
-        <div class="desc">查看和管理设备序列号</div>
-      </li>
-      <li>
-        <a href="http://jellyfin.babyamy.store" target="_blank">🎬 服务器电影库（Jellyfin）</a>
-        <div class="desc">访问私有电影/媒体服务器</div>
-      </li>
-      <li>
-        <a href="http://openwrt.babyamy.store" target="_blank">🌐 东莞路由器管理</a>
-        <div class="desc">进入 OpenWRT 路由器后台</div>
-      </li>
-      <li>
-        <a href="http://pc.babyamy.store" target="_blank">🖥️ 东莞台式机远程控制</a>
-        <div class="desc">访问东莞的主力 PC 设备</div>
-      </li>
-      <li>
-        <a href="https://visitor.alisa.shop/login" target="_blank">👁️ 查看 Alisa 访客记录</a>
-        <div class="desc">访客监控系统后台登录</div>
-      </li>
-      <li>
-        <a href="#" onclick="alert('请连接打印系统并执行标签打印任务')">🖨️ 打印海华标签</a>
-        <div class="desc">执行标签打印任务（待集成）</div>
-      </li>
-    </ul>
-  </main>
+  <h1>🔗 快速导航</h1>
+  <ul>
+    <li>
+      <a href="http://88.babyamy.store:3000/activate" target="_blank">🤖 启动 DeepSeek 自动回复</a>
+      <div class="desc">启动智能自动回复系统</div>
+    </li>
+    <li>
+      <a href="http://88.babyamy.store:3000/pause" target="_blank">⏸️ 暂停 DeepSeek 自动回复</a>
+      <div class="desc">暂停当前的自动回复服务</div>
+    </li>
+    <li>
+      <a href="http://serial.babyamy.store" target="_blank">🔐 序列号管理</a>
+      <div class="desc">查看和管理设备序列号</div>
+    </li>
+    <li>
+      <a href="http://jellyfin.babyamy.store" target="_blank">🎬 服务器电影库（Jellyfin）</a>
+      <div class="desc">访问私有电影/媒体服务器</div>
+    </li>
+    <li>
+      <a href="http://openwrt.babyamy.store" target="_blank">🌐 东莞路由器管理</a>
+      <div class="desc">进入 OpenWRT 路由器后台</div>
+    </li>
+    <li>
+      <a href="http://pc.babyamy.store" target="_blank">🖥️ 东莞台式机远程控制</a>
+      <div class="desc">访问东莞的主力 PC 设备</div>
+    </li>
+    <li>
+      <a href="https://visitor.alisa.shop/login" target="_blank">👁️ 查看 Alisa 访客记录</a>
+      <div class="desc">访客监控系统后台登录</div>
+    </li>
+    <li>
+      <a href="#" onclick="alert('请连接打印系统并执行标签打印任务')">🖨️ 打印海华标签</a>
+      <div class="desc">执行标签打印任务（待集成）</div>
+    </li>
+  </ul>
 </body>
 </html>
