--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       text-decoration: none;
       color: #333;
       font-weight: bold;
+      font-size: 30px;
     }
     a:hover {
       color: #4CAF50;
@@ -79,3 +80,4 @@
   </ul>
 </body>
 </html>
+
