--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       color: #4CAF50;
     }
     .desc {
-      font-size: 0.9em;
+      font-size: 20px;
       color: #666;
       margin-top: 4px;
     }
@@ -80,4 +80,5 @@
   </ul>
 </body>
 </html>
+
 
