--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>导航页面</title>
+  <title>导航</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -43,7 +43,6 @@
   </style>
 </head>
 <body>
-  <h1>🔗 快速导航</h1>
   <ul>
     <li>
       <a href="http://88.babyamy.store:3000/activate" target="_blank">🤖 启动 DeepSeek 自动回复</a>
@@ -80,6 +79,7 @@
   </ul>
 </body>
 </html>
+
 
 
 
