--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="desc">暂停当前的自动回复服务</div>
     </li>
     <li>
-      <a href="http://serial.babyamy.store" target="_blank">🔐 序列号管理</a>
+      <a href="https://serial.babyamy.store/" target="_blank">🔐 序列号管理</a>
       <div class="desc">查看和管理设备序列号</div>
     </li>
     <li>
@@ -79,6 +79,7 @@
   </ul>
 </body>
 </html>
+
 
 
 
