--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="desc">查看和管理设备序列号</div>
     </li>
     <li>
-      <a href="http://jellyfin.babyamy.store" target="_blank">🎬 服务器电影库（Jellyfin）</a>
+      <a href="http://jellyfin.babyamy.store:8096/" target="_blank">🎬 服务器电影库（Jellyfin）</a>
       <div class="desc">访问私有电影/媒体服务器</div>
     </li>
     <li>
@@ -79,6 +79,7 @@
   </ul>
 </body>
 </html>
+
 
 
 
