--- a/index.html
+++ b/index.html
@@ -73,12 +73,13 @@
       <div class="desc">访客监控系统后台登录</div>
     </li>
     <li>
-      <a href="#" onclick="alert('请连接打印系统并执行标签打印任务')">🖨️ 打印海华标签</a>
+      <a href="http://jellyfin.babyamy.store:8000/" onclick="alert('请连接打印系统并执行标签打印任务')">🖨️ 打印海华标签</a>
       <div class="desc">执行标签打印任务（待集成）</div>
     </li>
   </ul>
 </body>
 </html>
+
 
 
 
